home/static/css/global/global.css
/* ... */
.featured-content a {
  text-decoration: none;
  font-style: normal;
  font-weight: bold;
  font-size: 10px;
  line-height: 22px;
  letter-spacing: 0.01em;
  color: inherit;
  padding: 0px 10px;
  text-align: left;
}

.featured-content svg, .section-featured-content svg {
  stroke: currentColor;
}

@media only screen and (min-width: 360px) {
  .featured-content {
    margin: 0 20px;
    margin-top: 7px;
    margin-bottom: 19px;
    padding: 13px 12px;
  }
  .featured-content a, .section-featured-content-title {
    font-size: 16px;
    line-height: 22px;
  }
}

.section-featured-content {
  display: flex;
  flex-direction: column;
  text-decoration: none;
  font-style: normal;
  font-weight: bold;
  font-size: 10px;
  line-height: 22px;
  letter-spacing: 0.01em;
  color: inherit;
}

.section-featured-content-img img {
  border-radius: 8px;
  width: 100%;
  height: auto;
}

.section-featured-content-title {
  display: flex;
  align-items: center;
  justify-content: space-around;
  margin-top: 5px;
  border-radius: 8px;
}

.sub-section {
  text-decoration: none;
  color: #303030;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  padding: 8px 12px;
  border-bottom: 1px solid #EFEFEF;
  font-style: normal;
  font-weight: bold;
  font-size: 10px;
  letter-spacing: 0.01em;
  text-align: left;
}

.overlay-holder {
  overflow: hidden;
  position: relative;
}

.overlay-holder.complete:after {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  content: "";
  z-index: 1;
  background: linear-gradient(0deg, rgba(26, 144, 144, 0.7), rgba(26, 144, 144, 0.7));
  border-radius: 8px;
}

.overlay-holder.complete:before {
  background-image: url("/static/icons/tick-square.svg");
  content: "";
  height: 28px;
  width: 28px;
  background-size: cover;
  background-repeat: no-repeat;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 2;
}

@media only screen and (min-width: 360px) {
  .sub-section {
    padding: 8px 20px;
    font-size: 16px;
    line-height: 22px;
  }
}

.rtl .quiz__imageholder  {
  transform: rotate(180deg);
}

.rtl .featured-content__imageholder  {
  transform: rotate(180deg);
}

/* section end */

/* article start */
.article__lead-img {
  width: 100%;
  height: auto;
}

.article__content {
  padding: 0px 12px;
  padding: 0 !important;
}

.article__content img,
.article__content video {
  width: 100%;
  height: auto;
}

.article__content audio {
  width: 100%;
}

.article__content p,
.article__content ul li,
.article__content ol li,
.polls-widget__description p,
.polls-widget__description ul li,
.polls-widget__description ol li,
.survey-page__description p,
.survey-page__description ul li,
.survey-page__description ol li,
.quiz-page__description p,
.quiz-page__description ul li,
.quiz-page__description ol li {
  font-style: normal;
  font-weight: 400;
  font-size: 10px;
  line-height: 16px;
}

.quiz-page__description {
  margin-bottom: 10px;
}

.article__content--video a, .article__content--audio a {
  color: #303030;
}

.article__content__link-btn {
  margin-top: 20px;
  margin-bottom: 20px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 8px 16px;
  border: 1px solid #303030;
  border-radius: 8px;
  width: 100%;
  font-style: normal;
  font-weight: 600;
  font-size: 10px;
  line-height: 16px;
  color: #303030;
  text-decoration: none;
}

@media only screen and (min-width: 360px) {
  .article__content {
    padding: 0px 22px;
  }

  .article__content p,
  .article__content ul li,
  .article__content ol li,
  .polls-widget__description p,
  .polls-widget__description ul li,
  .polls-widget__description ol li,
  .survey-page__description p,
  .survey-page__description ul li,
  .survey-page__description ol li,
  .quiz-page__description p,
  .quiz-page__description ul li,
  .quiz-page__description ol li {
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
  }

  .article__content__link-btn {
    font-size: 16px;
    line-height: 22px;
    padding: 12px 16px;
  }
}

.article__navigation {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  padding-top: 12px;
}

.article__navigation a {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 8px 12px;
  text-decoration: none;
  width: 105px;
  height: 32px;
  border-radius: 18px;
  margin-bottom: 12px;
  font-style: normal;
  font-weight: 600;
}

.article__navigation--previous {
  font-size: 10px;
  line-height: 16px;
  color: #303030;
  border: 1.5px solid #d8d8d8;
}

.article__navigation--next {
  height: 22px;
  background-color: #303030;
  font-size: 10px;
  line-height: 16px;
  color: #FFFFFF !important;
}
/* ... */

